# python-assignment

assessment-1/: README.md  analize_content.py  main.py  process_csv.py  tvcn_vmf1136 - phimle.csv
assessment-1/csv/: tvcn_vmf1136_phimbo.csv
assessment-2/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data_loader.py  docker-compose.yml
assessment-2/app/: data_loader.py
assessment-3/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
assessment-3/alembic/: env.py
assessment-3/alembic/versions/: 2026_01_06_1607-913dcf5a2d10_create_movies_table.py  2026_01_07_1446-c44c3366a677_create_categories_table.py  2026_01_08_2350-6612bcac9a16_create_users_table.py
assessment-3/app/: data_loader.py  main.py  models.py
assessment-3/app/api/: auth.py  movies.py
assessment-3/app/auth/: __init__.py  jwt_handler.py  password.py
assessment-3/app/csv/: trending.csv
assessment-3/app/db/: __init__.py  session.py
assessment-3/app/db/models/: __init__.py  category.py  movie.py  user.py
assessment-3/app/dto/: __init__.py  auth.py  movie.py
assessment-3/app/repositories/: __init__.py  category_repo.py  movie_repo.py
assessment-3/app/services/: __init__.py  category_service.py  movie_service.py
assessment-4/: README.md
assessment-4/movie-fe/: index.html  package-lock.json  package.json
assessment-4/movie-fe/src/: App.css  App.tsx  index.css
assessment-4/movie-fe/src/api/: auth.ts  client.ts  index.ts  movies.ts
assessment-4/movie-fe/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  FilterBar.css  FilterBar.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  Layout.css  (+10 more)
(+14 files in other folders)
