[project]
name = "assessment-2-movie-manager"
version = "0.1.0"
description = "Simple FastAPI movie manager used in Assessment 2"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.95",
  "python-multipart>=0.0.21",
  "uvicorn[standard]>=0.22",
  "sqlalchemy>=2.0",
  "asyncpg>=0.27",
  "alembic>=1.17.2",
  "psycopg2-binary>=2.9.11",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
